force-app/main/default/objects/Discount_Code_Link__c/Discount_Code_Link__c.object-meta.xml
<CustomObject>
    <label>Discount Code Link</label>
    <nameField>
        <displayFormat>DCL-{000000}</displayFormat>
        <label>Discount Code Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Code Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>