force-app/main/default/objects/Discount_Code_Link__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Discount_Code_Usages</relationshipName>
    <type>Lookup</type>
</CustomField>