force-app/main/default/objects/Discount_Code_Link__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Discount Code Links</relationshipLabel>
    <relationshipName>Discount_Code_Links</relationshipName>
    <type>Lookup</type>
</CustomField>