force-app/main/default/objects/Discount_Code_Link__c/fields/Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>Discount_Code__c</fullName>
    <label>Discount Code</label>
    <referenceTo>Discount_Code__c</referenceTo>
    <relationshipName>Discount_Code_Usages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>