force-app/main/default/objects/Discount_Code_Link__c/fields/Is_Used__c.field-meta.xml
<CustomField>
    <fullName>Is_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Used</label>
    <type>Checkbox</type>
</CustomField>