force-app/main/default/objects/Discount_Code_Link__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Discount Code Links</relationshipLabel>
    <relationshipName>Discount_Code_Links</relationshipName>
    <type>Lookup</type>
</CustomField>